<resources>
    <string name="app_name">Hex Launcher</string>
    <string name="dev_email">intentionalhexlauncher@gmail.com</string>
    <string name="file_provider_name">com.mrmannwood.hexlauncher.fileprovider</string>
    <string name="unable_to_start_app">Unable to start app</string>
    <string name="no_app_selected">No app selected</string>
    <string name="menu_item_home_choose_wallpaper">Change Wallpaper</string>
    <string name="menu_item_home_manage_widgets">Manage Widgets</string>
    <string name="menu_item_home_settings">Settings</string>
    <string name="menu_item_uninstall_app_title">Uninstall</string>
    <string name="menu_item_app_details">App Details</string>
    <string name="menu_item_app_customize">Customize</string>
    <string name="preferences_role_set_home">Set Hex Launcher as Home app</string>
    <string name="preferences_category_feedback">Feedback</string>
    <string name="preferences_feedback_rate">Rate %s</string>
    <string name="preferences_category_debugging">Debugging</string>
    <string name="preferences_debugging_report_a_problem">Report a Problem</string>
    <string name="preferences_debugging_logging_enable">Log to disk</string>
    <string name="preferences_home_widgets_date_name">Date</string>
    <string name="preferences_home_widgets_time_name">Time</string>
    <string name="preferences_home_orientation">Home Screen Orientation</string>
    <string-array name="preferences_home_orientation_options">
        <item>Auto Rotate</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string name="preferences_category_app_list">Apps</string>
    <string name="preferences_app_list_show_all_apps">Show All Apps</string>
    <string name="preferences_app_list_enable_fuzzy_search">Enable Fuzzy Search</string>
    <string name="preferences_app_list_enable_fuzzy_search_summary">Shows results close to the search term</string>
    <string name="preferences_app_list_enable_open_last_option">Open App When Last Option</string>
    <string name="preferences_app_list_enable_open_last_option_summary">Opens app when it is the last option and is spelled correctly</string>
    <string name="preferences_app_list_enable_category_search">Enable Searching by App Category</string>
    <string name="preferences_app_list_all_apps_hotkey">Enable "Show all apps" hotkey</string>
    <string name="preferences_app_list_all_apps_hotkey_summary">Searching \"...\" shows all apps</string>
    <string name="preferences_category_preferences">Preferences</string>
    <string name="preferences_preferences_left_handed">Left Handed</string>
    <string name="preferences_category_gestures">Gestures</string>
    <string name="preferences_gestures_opacity">Gesture Wheel Opacity</string>
    <string name="preferences_gestures_reset_disabled">Reset Disabled Items</string>
    <string name="preferences_gestures_disable_all">Disable All Items</string>
    <string name="preferences_category_legal">Legal</string>
    <string name="preferences_privacy_policy">Privacy Policy</string>
    <string name="preferences_category_version_info">Version Info</string>
    <string name="preferences_version_name">App Version: %s</string>
    <string name="preferences_version_build_type">Build Type: %s</string>
    <string name="settings_title">Settings</string>
    <string name="nux_welcome_message">Welcome to Hex Launcher</string>
    <string name="nux_welcome_image_content_description">Welcome Image of stacked hexagons</string>
    <string name="nux_swipe_message">Swipe up to search</string>
    <string name="nux_settings_message">Double tap then long press for settings</string>
    <string name="nux_settings_tutorial_settings">Settings</string>
    <string name="nux_customize_message">Long press icons to change or customize</string>
    <string name="nux_touch_tutorial_message">Touch the background to display shortcuts</string>
    <string name="nux_touch_tutorial_message_2">Touch or move through an app to activate it</string>
    <string name="nux_touch_tutorial_message_3">Lift to launch the app</string>
    <string name="nux_customize_tutorial_message">Hold on an app to customize it</string>
    <string name="nux_customize_tutorial_customize">Customize</string>
    <string name="nux_search_message">Search for apps</string>
    <string name="nux_search_message_2">Long press an icon to customize it</string>
    <string name="nux_search_app_customize">Customize</string>
    <string name="nux_search_app_details">App Details</string>
    <string name="nux_set_as_home">Set as Default</string>
    <string name="nux_set_as_home_content_description">Set as Default</string>
    <string name="nux_set_as_home_or">Or</string>
    <string name="nux_set_as_home_or_content_description">Or</string>
    <string name="nux_try_it_out">Try it Out</string>
    <string name="nux_try_it_out_content_description">Try it Out</string>
    <string name="app_list_search_edit_text_hint">Search</string>
    <string name="app_list_results_content_description">Search result space</string>
    <string name="all_app_list_results_content_description">List of apps</string>
    <string name="home_time_content_description">Time</string>
    <string name="home_date_content_description">Date</string>
    <string name="home_apps_still_loading">Apps are still loading</string>
    <string name="gesture_search_apps">Search Apps</string>
    <string name="gesture_set_quick_access_item">Set Quick Access Item</string>
    <string name="gesture_app_chooser_title">Choose An App</string>
    <string name="gesture_item_menu_change">Change Item</string>
    <string name="gesture_item_menu_disable">Disable Item</string>
    <string name="home_arrangement_tutorial_get_started">Long press the background to get started</string>
    <string name="home_arrangement_tutorial_customize_widget">Long press a widget to customize it.\nDrag to move it.</string>
    <string name="home_arrangement_widgets_menu_title">Widgets</string>
    <string name="home_arrangement_widget_color">Color</string>
    <string name="home_arrangement_widget_hide">Hide</string>
    <string name="dialog_color_picker_suggested_swatch_content_description">swatch with color suggestion: %s</string>
    <string name="dialog_color_picker_swatch_content_description">color output</string>
    <string name="dialog_color_picker_red_content_description">red</string>
    <string name="dialog_color_picker_green_content_description">green</string>
    <string name="dialog_color_picker_blue_content_description">blue</string>
    <string name="color_picker_button_image_selector">From Image</string>
    <string name="color_picker_button_positive">OK</string>
    <string name="color_picker_button_negative">Cancel</string>
    <string name="text_entry_dialog_prompt">Enter New Tag</string>
    <string name="text_entry_button_positive">OK</string>
    <string name="text_entry_button_negative">Cancel</string>
    <string name="text_entry_cannot_contain_comma">Tags cannot contain commas</string>
    <string name="rage_shake_email_body">DebugInfo:\n%s\n\nPlease describe the issue you\'re experiencing</string>
    <string name="customize_hide_app">Hide App</string>
    <string name="customize_show_app">Un-Hide App</string>
    <string name="customize_app_icon">Icon</string>
    <string name="customize_app_tags_label">Tags</string>
    <string name="customize_app_tags_add_content_description">Add new tag</string>
    <string name="customize_app_tags_results_content_description">App tags and categories list</string>
    <string name="customize_app_background_color">Background Color</string>
    <string name="customize_app_foreground_icon">Foreground Icon</string>
    <string name="customize_app_background_icon">Background Icon</string>
    <string name="customize_app_tags_delete_tag_content_description">Delete tag %s</string>
    <string name="error_cannot_set_app">Unable to use that app as a shortchut</string>
    <string name="error_cannot_change_wallpaper">Unable to set that wallpaper</string>
    <string name="error_exception_while_searching">An unknown error occurred while searching. Please submit an error report in Settings.</string>
    <string name="error_app_requires_default_launcher">App Must be Default Launcher</string>
    <string name="error_app_profile_unavailable">Profile Not Available</string>
    <string-array name="APP_CATEGORY_UNDEFINED"/>
    <string-array name="APP_CATEGORY_GAME">
        <item>game</item>
    </string-array>
    <string-array name="APP_CATEGORY_AUDIO">
        <item>audio</item>
        <item>music</item>
    </string-array>
    <string-array name="APP_CATEGORY_VIDEO">
        <item>video</item>
        <item>movie</item>
    </string-array>
    <string-array name="APP_CATEGORY_IMAGE">
        <item>image</item>
        <item>picture</item>
    </string-array>
    <string-array name="APP_CATEGORY_SOCIAL">
        <item>social</item>
    </string-array>
    <string-array name="APP_CATEGORY_NEWS">
        <item>news</item>
    </string-array>
    <string-array name="APP_CATEGORY_MAPS">
        <item>maps</item>
    </string-array>
    <string-array name="APP_CATEGORY_PRODUCTIVITY">
        <item>productivity</item>
        <item>office</item>
    </string-array>
    <string-array name="APP_CATEGORY_ACCESSIBILITY">
        <item>accessibility</item>
    </string-array>
    <string name="alice_blue">Alice Blue</string>
    <string name="antique_white">Antique White</string>
    <string name="aqua">Aqua</string>
    <string name="aquamarine">Aquamarine</string>
    <string name="azure">Azure</string>
    <string name="beige">Beige</string>
    <string name="bisque">Bisque</string>
    <string name="black">Black</string>
    <string name="blanched_almond">Blanched Almond</string>
    <string name="blue">Blue</string>
    <string name="blue_violet">Blue Violet</string>
    <string name="brown">Brown</string>
    <string name="burly_wood">Burly Wood</string>
    <string name="cadet_blue">Cadet Blue</string>
    <string name="chartreuse">Chartreuse</string>
    <string name="chocolate">Chocolate</string>
    <string name="coral">Coral</string>
    <string name="cornflower_blue">Cornflower Blue</string>
    <string name="cornsilk">Cornsilk</string>
    <string name="crimson">Crimson</string>
    <string name="cyan">Cyan</string>
    <string name="dark_blue">Dark Blue</string>
    <string name="dark_cyan">Dark Cyan</string>
    <string name="dark_goldenrod">Dark Goldenrod</string>
    <string name="dark_gray">Dark Gray</string>
    <string name="dark_green">Dark Green</string>
    <string name="dark_khaki">Dark Khaki</string>
    <string name="dark_magenta">Dark Magenta</string>
    <string name="dark_olive_green">Dark Olive Green</string>
    <string name="dark_orange">Dark Orange</string>
    <string name="dark_orchid">Dark Orchid</string>
    <string name="dark_red">Dark Red</string>
    <string name="dark_salmon">Dark Salmon</string>
    <string name="dark_sea_green">Dark Sea Green</string>
    <string name="dark_slate_blue">Dark Slate Blue</string>
    <string name="dark_slate_gray">Dark Slate Gray</string>
    <string name="dark_turquoise">Dark Turquoise</string>
    <string name="dark_violet">Dark Violet</string>
    <string name="deep_pink">Deep Pink</string>
    <string name="deep_sky_blue">Deep Sky Blue</string>
    <string name="dim_gray">Dim Gray</string>
    <string name="dodger_blue">Dodger Blue</string>
    <string name="fire_brick">Fire Brick</string>
    <string name="floral_white">Floral White</string>
    <string name="forest_green">Forest Green</string>
    <string name="fuchsia">Fuchsia</string>
    <string name="gainsboro">Gainsboro</string>
    <string name="ghost_white">Ghost White</string>
    <string name="gold">Gold</string>
    <string name="goldenrod">Goldenrod</string>
    <string name="gray">Gray</string>
    <string name="green">Green</string>
</resources>