<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/nux_set_as_home_or"
        android:textColor="@color/colorOnPrimary"
        android:textSize="16sp"
        android:contentDescription="@string/nux_set_as_home_or_content_description"
        />

    <FrameLayout
        android:id="@+id/set_as_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/center"
        android:contentDescription="@string/nux_set_as_home_content_description">

        <com.mrmannwood.hexlauncher.view.HexagonView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:src="@color/colorSecondary"
            android:layout_gravity="center"/>

        <com.mrmannwood.hexlauncher.view.HexagonView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@color/colorPrimary"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nux_set_as_home"
            android:textColor="@color/colorOnPrimary"
            android:textSize="16sp"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/try_it_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/center"
        android:contentDescription="@string/nux_try_it_out_content_description">

        <com.mrmannwood.hexlauncher.view.HexagonView
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:src="@color/colorPrimary"
            android:layout_gravity="center"/>

        <com.mrmannwood.hexlauncher.view.HexagonView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@color/colorSecondary"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nux_try_it_out"
            android:textColor="@color/colorOnSecondary"
            android:textSize="16sp"
            />

    </FrameLayout>


</RelativeLayout>