<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_entry_dialog_prompt"
        android:textSize="18sp"
        android:paddingTop="12dp"
        android:paddingStart="12dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_entry_button_negative"/>

        <Space
            android:layout_width="12dp"
            android:layout_height="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_entry_button_positive"/>

    </LinearLayout>

</LinearLayout>