<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/controller_swatch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/dialog_color_picker_swatch_content_description"/>
        
        <LinearLayout
            android:id="@+id/suggested_swatch_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:id="@+id/swatch_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"/>

            <View
                android:id="@+id/swatch_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"/>

            <View
                android:id="@+id/swatch_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"/>


            <View
                android:id="@+id/swatch_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"/>


            <View
                android:id="@+id/swatch_5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="12dp"/>

    <TextView
        android:id="@+id/hex_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="12dp"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="255"
        android:value="255"
        app:labelBehavior="gone"
        app:trackColorActive="#FF0000"
        app:trackColorInactive="#FF4D4D"
        app:thumbColor="#FF0000"
        android:contentDescription="@string/dialog_color_picker_red_content_description"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="255"
        android:value="255"
        app:labelBehavior="gone"
        app:trackColorActive="#00FF00"
        app:trackColorInactive="#4DFF4D"
        app:thumbColor="#00FF00"
        android:contentDescription="@string/dialog_color_picker_green_content_description"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        android:valueTo="255"
        android:value="255"
        app:labelBehavior="gone"
        app:trackColorActive="#0000FF"
        app:trackColorInactive="#4D4DFF"
        app:thumbColor="#0000FF"
        android:contentDescription="@string/dialog_color_picker_blue_content_description"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_picker_button_negative"/>

        <Space
            android:layout_width="12dp"
            android:layout_height="0dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_picker_button_positive"/>

    </LinearLayout>

</LinearLayout>